--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.0",
     "preact": "^10.24.1",
     "prop-types": "^15.8.1",
     "react-icons": "^5.3.0",
