--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@vercel/analytics": "^1.4.0",
     "preact": "^10.24.1",
     "prop-types": "^15.8.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-responsive-masonry": "^2.4.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.9.1",
