--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.4.0",
+    "firebase": "^11.0.2",
     "preact": "^10.24.1",
     "prop-types": "^15.8.1",
     "react-hot-toast": "^2.4.1",
@@ -23,6 +24,8 @@
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.13",
     "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.13",
     "vite": "^5.4.8"
   }
